[package]
name = "valq"
version = "0.1.0"
edition = "2024"

[dependencies]
getset = "0.1.6"
valkey-module = { version = "0.1.10" }
#valkey-module-macros = { version = "0.1.10" }

[dev-dependencies]
anyhow = "1.0.98"
redis = "0.32.4"
serial_test = "3.2.0"

[features]
enable-system-alloc = ["valkey-module/enable-system-alloc"]
# default = ["enable-system-alloc"]

[lib]
crate-type = ["cdylib"]

[lints.clippy]
unwrap_used = "forbid"
